@@ -1,3 +1,8 @@
+2006-01-19  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* userprefs.c (prefs_load): Initialize GError before using it (fix
+	bug #327614).  Plus, clean up the code.
+
 2005-12-06  Vincent Noel  <noel@localhost.localdomain>
 
 	* logview.schemas.in: Fix some key descriptions. Fix bug #323141.
